// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches snapshot 1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi 
  save
</div>
`;

exports[`it matches snapshot 2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi 
  click me please
</div>
`;
